[tool.poetry]
name = "flask-login-without-orm"
version = "0.1.0"
description = "Example of how to use Flask Login without ORM."
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/flask-login-without-orm"
repository = "https://github.com/leynier/flask-login-without-orm"
documentation = "https://github.com/leynier/flask-login-without-orm"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Login = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
black = "^22.1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
