[tool.poetry]
name = "flask-login-without-orm"
version = "0.1.0"
description = "Example of how to use Flask Login without ORM."
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/flask-login-without-orm"
repository = "https://github.com/leynier/flask-login-without-orm"
documentation = "https://github.com/leynier/flask-login-without-orm"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Flask-Login = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
